--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -659,6 +659,18 @@
     padding-top: 22px;
     padding-bottom: 22px;
   }
+  .contact-top-btn-nav{
+    padding-left: 18px;
+  }
+  .contact-serch-main {
+    width: 40%;
+  }
+  .contact-top-btn-nav{
+    width: 60%;
+  }
+  .contact-top-btn-nav .con-btn-wrap .btn img {
+    margin-right: 5px;
+  }
 }
 @media only screen and (max-width: 1299px) {
   .con-list-uimg {
@@ -741,6 +753,18 @@
   }
   .wallet-top-wrap .dashboard-notification-sec {
     width: 200px;
+  }
+  .contact-top-search-sec {
+    display: block !important;
+  }
+  .contact-serch-main {
+    margin-bottom: 20px;
+    width: 75% !important;
+  }
+  .contact-top-btn-nav {
+    padding-left: 0px !important;
+    width: 100%;
+    justify-content: left;
   }
 }
 @media only screen and (max-width: 1199px) {
@@ -1083,7 +1107,7 @@
   }
   .contact-top-btn-nav .con-btn-wrap .btn img {
     margin-right: 8px;
-    max-width: 20px;
+    max-width: 25px;
   }
   .contact-top-btn-nav {
     padding-left: 20px;
@@ -1227,13 +1251,16 @@
     padding: 40px 0px 20px 20px !important;
   }
   .contact-top-btn-nav .con-btn-wrap {
-    padding-right: 15px;
+    padding-right:8px;
   }
   .contact-top-btn-nav .con-btn-wrap > .btn{
-    padding: 7px 10px;
+    padding: 11px 10px;
   }
   .contact-top-btn-nav .btn img{
-    max-width: 29px;
+    max-width: 27px;
+  }
+  .contact-top-btn-nav .con-btn-wrap > .btn{
+    font-size: 13px;
   }
 }
 @media only screen and (max-width: 1199px) and (min-width: 992px) {
@@ -1593,18 +1620,6 @@
   }
 }
 @media only screen and (max-width: 1024px) {
-  .contact-top-search-sec {
-    display: block !important;
-  }
-  .contact-serch-main {
-    margin-bottom: 20px;
-    width: 80% !important;
-  }
-  .contact-top-btn-nav {
-    padding-left: 0px;
-    width: 100%;
-    justify-content: left;
-  }
   #already_register_user .modal-body p.user_name {
     margin: 30px 0px;
     font-size: 25px;
@@ -3871,6 +3886,25 @@
     padding-left: 10px;
     padding-right: 10px;
     font-size: 12px;
+  }
+  .wallet-acc-fund-btns .btn{
+    min-width: auto;
+  }
+  .wallet-acc-fund-btns .btn-wrap .btn{
+      padding: 15px 25px;
+  }
+  .wallet-fund-row-amt table td:last-child{
+    font-size: 17px;
+    line-height: 23px;
+  }
+  .wallet-fund-row-amt table td{
+    padding: 20px 15px 10px;
+  }
+  .contact-top-btn-nav{
+    flex-wrap:wrap;
+  }
+  .contact-top-btn-nav .con-btn-wrap {
+    margin-bottom: 10px;
   }
 }
 @media only screen and (max-width: 480px) {
