commit 0.1.0 added changes fixes for add-fund and other issues 28-Mar-2023

--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -394,7 +394,7 @@
   }
   .send-top-sec {
     padding-bottom: 40px;
-    padding-right:0px;
+    padding-right: 0px;
   }
   .send-whom-slider .contact-name {
     font-size: 17px;
@@ -659,13 +659,13 @@
     padding-top: 22px;
     padding-bottom: 22px;
   }
-  .contact-top-btn-nav{
+  .contact-top-btn-nav {
     padding-left: 18px;
   }
   .contact-serch-main {
     width: 40%;
   }
-  .contact-top-btn-nav{
+  .contact-top-btn-nav {
     width: 60%;
   }
   .contact-top-btn-nav .con-btn-wrap .btn img {
@@ -749,7 +749,8 @@
     max-width: 230px;
   }
   .wallet-top-wrap .wallet-title-wrap {
-    width: calc(100% - 200px);
+    /* width: calc(100% - 200px); */
+    width: 100% !important;
   }
   .wallet-top-wrap .dashboard-notification-sec {
     width: 200px;
@@ -1251,15 +1252,15 @@
     padding: 40px 0px 20px 20px !important;
   }
   .contact-top-btn-nav .con-btn-wrap {
-    padding-right:8px;
+    padding-right: 8px;
   }
-  .contact-top-btn-nav .con-btn-wrap > .btn{
+  .contact-top-btn-nav .con-btn-wrap > .btn {
     padding: 11px 10px;
   }
-  .contact-top-btn-nav .btn img{
+  .contact-top-btn-nav .btn img {
     max-width: 22px;
   }
-  .contact-top-btn-nav .con-btn-wrap > .btn{
+  .contact-top-btn-nav .con-btn-wrap > .btn {
     font-size: 12px;
   }
 }
@@ -1326,7 +1327,7 @@
   }
   .wallet-page .wallet-title-wrap {
     flex: 0 0 auto;
-    width: 70.33333333%;
+    width: 100%;
   }
   .wallet-page .dashboard-notification-sec {
     flex: 0 0 auto;
@@ -1340,8 +1341,11 @@
   }
   .wallet-card-add-btns a img,
   .wallet-title-btns a img {
-    margin-right: 8px;
-    max-width: 32px;
+    margin-right: 5px;
+    max-width: 25px;
+  }
+  .wallet-main-right .wallet-card-add-btns a {
+    font-size: 12px;
   }
   .wallet-ac-inner p.card-holder-nm {
     font-size: 26px;
@@ -1356,11 +1360,10 @@
   }
   .wallet-main-right,
   .wallet-top-wrap .dashboard-notification-sec {
-    width: 390px;
+    width: 320px;
   }
-  .wallet-main-left,
-  .wallet-top-wrap .wallet-title-wrap {
-    width: calc(100% - 390px);
+  .wallet-main-left {
+    width: calc(100% - 320px);
   }
   .wallet-title-btns a.wallet-top-1-btn {
     margin-right: 10px;
@@ -1675,6 +1678,9 @@
   }
   .mobile-toggle {
     display: none;
+  }
+  .dashboard-top-sec.wallet-top-wrap {
+    padding-top: 20px;
   }
 }
 @media only screen and (max-width: 991px) {
@@ -2880,7 +2886,7 @@
     transition: all 0.5s ease-in-out;
   }
   .sidebar-open .mobile-toggle .toggle-admin-btn {
-      z-index: 99999;
+    z-index: 99999;
   }
   .sidebar-open .toggle-admin-btn {
     transform: translateX(230px);
@@ -2939,18 +2945,18 @@
   }
   .contact-top-btn-nav {
     max-width: 100%;
-    width: 100%;  
+    width: 100%;
     justify-content: left;
   }
-  .send-top-sec form .search-field{
-      margin-left: 0px;
-      width: 100%;
+  .send-top-sec form .search-field {
+    margin-left: 0px;
+    width: 100%;
   }
-  .send-top-sec>form{
+  .send-top-sec > form {
     width: 100% !important;
   }
   .send-top-sec form .search-field {
-    max-width:500px;
+    max-width: 500px;
   }
   .notification-rm-wrap svg {
     opacity: 1;
@@ -3689,24 +3695,35 @@
     line-height: 29px;
   }
   /* Updated on  24-03 */
-  .contact-pg-popup form{
-      margin-top:15px;
+  .contact-pg-popup form {
+    margin-top: 15px;
   }
-  .con-listing-info{
+  .con-listing-info {
     max-width: 200px;
     min-width: 200px;
   }
-  .contact-listing-wrap > li > div{
+  .contact-listing-wrap > li > div {
     margin-right: 8px;
   }
-  #invite-sent-popup .modal-body h3{
+  #invite-sent-popup .modal-body h3 {
     font-size: 24px !important;
   }
-  .invite-sent-modal .btn{
+  .invite-sent-modal .btn {
     margin-top: 20px;
   }
-  .contact-serch-main{
+  .contact-serch-main {
     width: 100% !important;
+  }
+  .wallet-title-btns a {
+    margin-bottom: 8px;
+  }
+  .wallet-title-btns a span:last-child {
+    font-size: 13px;
+    max-width: 75px !important;
+  }
+  .wallet-card-add-btns a img,
+  .wallet-title-btns a img {
+    max-width: 25px;
   }
 }
 @media only screen and (max-width: 575px) {
@@ -3752,13 +3769,13 @@
     justify-content: flex-start;
     flex-wrap: wrap;
   }
-  .send-top-right-sec .main-search-wrap{
-      width: 100% !important;
+  .send-top-right-sec .main-search-wrap {
+    width: 100% !important;
   }
-  .send-top-sec form{
-      width:100% !important;
+  .send-top-sec form {
+    width: 100% !important;
   }
-  .send-top-sec form .search-field{
+  .send-top-sec form .search-field {
     margin-left: 0px;
     max-width: 100%;
   }
@@ -3887,21 +3904,21 @@
     padding-right: 10px;
     font-size: 12px;
   }
-  .wallet-acc-fund-btns .btn{
+  .wallet-acc-fund-btns .btn {
     min-width: auto;
   }
-  .wallet-acc-fund-btns .btn-wrap .btn{
-      padding: 15px 25px;
+  .wallet-acc-fund-btns .btn-wrap .btn {
+    padding: 15px 25px;
   }
-  .wallet-fund-row-amt table td:last-child{
+  .wallet-fund-row-amt table td:last-child {
     font-size: 17px;
     line-height: 23px;
   }
-  .wallet-fund-row-amt table td{
+  .wallet-fund-row-amt table td {
     padding: 20px 15px 10px;
   }
-  .contact-top-btn-nav{
-    flex-wrap:wrap;
+  .contact-top-btn-nav {
+    flex-wrap: wrap;
   }
   .contact-top-btn-nav .con-btn-wrap {
     margin-bottom: 10px;
@@ -3935,5 +3952,18 @@
   .con-modal-btn-wrap .btn {
     min-width: 125px;
     padding: 10px 10px !important;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .notification-user-wrap {
+    position: static;
+  }
+  .notification-dd-wrap {
+    min-width: calc(100% - 40px);
+    margin: auto;
+    top: 80px;
+    left: 10px;
+    right: 20px;
+    border-top-right-radius: 11px;
   }
 }
