--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -4941,8 +4941,14 @@ img.img-size {
 }
 .fund-payment-option-wrap {
   display: flex;
-  justify-content: space-between;
+  justify-content:center;
   text-align: center;
+}
+.fund-payment-option-wrap>a:first-child{
+  margin-right: 20px;
+}
+.fund-payment-option-wrap>a:last-child{
+  margin-left: 20px;
 }
 .fund-payment-option {
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.05);
@@ -6408,4 +6414,17 @@ ul.notification-list-wrap li:last-child {
 }
 .wc-details-wrap td{
   word-break: break-word;
+}
+.dashboard-bottom-sec{margin-top: 10px;}
+.contact-listing-wrap li:hover .con-listing-phone p,
+.contact-listing-wrap li:hover .con-listing-mail p{
+  color: #323232;
+}
+.send-whom-slider .contact-name{
+  -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    display: -webkit-box;
 }
