--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -63,14 +63,8 @@
   .contact-right-sec {
     padding-top: 30px;
   }
-  .con-listing-container {
-    margin-top: 35px;
-  }
   .contact-listing-wrap {
     margin-bottom: 35px;
-  }
-  .contact-listing-wrap li {
-    margin-bottom: 5px;
   }
   .wallet-link-bank-bottom {
     padding-top: 40px;
@@ -924,7 +918,7 @@
     padding: 0 2px;
     line-height: 20px;
   }
-  .send-whom-slider .swiper-button-next,
+  /* .send-whom-slider .swiper-button-next,
   .send-whom-slider .swiper-button-prev {
     right: 29px;
   }
@@ -934,7 +928,7 @@
   .send-whom-slider .swiper-horizontal > .swiper-scrollbar,
   .send-whom-slider .swiper-scrollbar.swiper-scrollbar-horizontal {
     width: calc(100% - 95px);
-  }
+  } */
   .send-btn-wrap {
     padding-top: 35px;
   }
@@ -961,7 +955,7 @@
     line-height: 22px;
   }
   .send-top-sec {
-    padding-bottom: 30px;
+    padding-bottom:0px;
     padding-right: 0px;
   }
   .one-time-pay-main-sec {
@@ -1626,6 +1620,21 @@
     font-size: 20px;
     line-height: 25px;
   }
+    .dashboard-right-sec.send-page-wrapper .send-top-sec,
+  .dashboard-right-sec.send-page-wrapper .send-btn-wrap,
+  .dashboard-right-sec.send-page-wrapper .dashboard-top-sec ,
+  .dashboard-right-sec.send-page-wrapper .loading{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .dashboard-right-sec.send-page-wrapper .send-whom-slider .swiper{
+    padding-left: 30px;
+  }
+  .send-page-wrapper .send-whom-slider .swiper-horizontal > .swiper-scrollbar,
+  .send-page-wrapper .send-whom-slider .swiper-scrollbar.swiper-scrollbar-horizontal{
+    width: calc(100% - 120px);
+    left: 30px;
+  }
 }
 @media only screen and (max-width: 991px) and (min-width: 820px) {
   .profile-inner-sec .profile-left-content,
@@ -1708,6 +1717,10 @@
     display: flex;
     justify-content: end;
     flex-wrap: wrap;
+  }
+  .send-page-wrapper .send-btn-wrap .btn-cancel-payment{
+    padding-left: 26px;
+    padding-right: 26px;
   }
 }
 @media only screen and (max-width: 1023px) and (min-width: 992px) {
@@ -2195,9 +2208,6 @@
   .fund-acc-modal .modal-content {
     padding: 40px;
   }
-  .con-listing-container {
-    margin-top: 30px;
-  }
   .dashboard-home-container .dashboard-bottom-sec {
     flex-wrap: wrap;
   }
@@ -2370,7 +2380,7 @@
     max-width: 277px;
   }
   form .search-field input[type="search"] {
-    padding: 12px 15px 12px 40px !important;
+    padding: 12px 22px 12px 40px !important;
     font-size: 14px;
     line-height: 16px;
   }
@@ -2704,9 +2714,6 @@
   .fund-acc-modal .modal-content {
     padding: 40px;
   }
-  .con-listing-container {
-    margin-top: 30px;
-  }
   .dashboard-home-container .dashboard-bottom-sec {
     flex-wrap: wrap;
   }
@@ -2991,6 +2998,20 @@
   .notification-rm-wrap svg {
     opacity: 1;
     visibility: visible;
+  }
+  .send-top-sec{
+    padding-top: 20px;
+  }
+  .contact-top-sec{
+    margin-top: 20px;
+  }
+  .edit-group-slider-main{
+      margin-left: -20px;
+      margin-right: -20px;
+  }
+  .edit-group-slider-main .swiper{
+    padding-left:20px;
+    padding-right: 20px;
   }
 }
 
@@ -3382,17 +3403,17 @@
     padding-left: 0;
     justify-content: flex-start;
   }
-  .send-whom-slider .swiper-button-next,
+  /* .send-whom-slider .swiper-button-next,
   .send-whom-slider .swiper-button-prev {
     right: 3px;
   }
   .send-whom-slider .swiper-button-prev {
     right: 35px;
-  }
+  } 
   .send-whom-slider .swiper-horizontal > .swiper-scrollbar,
   .send-whom-slider .swiper-scrollbar.swiper-scrollbar-horizontal {
     width: calc(100% - 65px);
-  }
+  }*/
   .payment-blocks-listing .input-select-wrap {
     max-width: 168px;
     min-width: 165px;
@@ -3754,6 +3775,43 @@
   .wallet-card-add-btns a img,
   .wallet-title-btns a img {
     max-width: 25px;
+  }
+  .dashboard-right-sec.send-page-wrapper .send-top-sec,
+  .dashboard-right-sec.send-page-wrapper .send-btn-wrap,
+  .dashboard-right-sec.send-page-wrapper .dashboard-top-sec,
+  .dashboard-right-sec.send-page-wrapper .loading {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .dashboard-right-sec.send-page-wrapper .send-whom-slider .swiper{
+    padding-left: 20px;
+  }
+  .send-page-wrapper .send-whom-slider .swiper-horizontal > .swiper-scrollbar,
+  .send-page-wrapper .send-whom-slider .swiper-scrollbar.swiper-scrollbar-horizontal{
+    width: calc(100% - 130px);
+    left: 20px;
+  }
+  .con-listing-container{
+    margin-top: 20px;
+  }
+  .contact-listing-wrap li{
+    margin-left:20px;
+    margin-right: 20px;
+  }
+  .con-listing-container {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+  .edit-group-slider-main{
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .edit-group-slider-main .swiper{
+    padding-left:15px;
+    padding-right: 15px;
+  }
+  .amt-with-currency span{
+    top:11px;
   }
 }
 @media only screen and (max-width: 575px) {
