--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -1257,15 +1257,15 @@
   .contact-top-btn-nav .con-btn-wrap > .btn {
     font-size: 12px;
   }
-  .wallet-ac-inner p.card-holder-nm{
+  .wallet-ac-inner p.card-holder-nm {
     font-size: 24px;
     line-height: 28px;
   }
-  .wallet-ac-inner  .card-num-date p:first-child{
+  .wallet-ac-inner .card-num-date p:first-child {
     font-size: 20px;
     line-height: 20px;
   }
-  .wallet-ac-inner .card-num-date p:last-child{
+  .wallet-ac-inner .card-num-date p:last-child {
     font-size: 14px;
     line-height: 14px;
   }
@@ -1278,14 +1278,14 @@
   .business-info-right .qr-btn {
     padding: 13px 20px;
   }
-  .wallet-top-nwrap .wallet-title-wrap{
+  .wallet-top-nwrap .wallet-title-wrap {
     display: block;
   }
-  .wallet-top-nwrap .wallet-title-btns{
+  .wallet-top-nwrap .wallet-title-btns {
     width: 100%;
     max-width: 100%;
     margin-top: 12px;
-    justify-content:left  !important;
+    justify-content: left !important;
   }
 }
 @media only screen and (max-width: 1100px) and (min-width: 992px) {
@@ -1481,7 +1481,6 @@
     max-width: 230px;
     min-width: 230px;
   }
-
 }
 /*@media only screen and (max-width: 1100px) and (min-width: 992px) {
   .dashboard-right-sec {
@@ -1711,11 +1710,11 @@
     display: none;
   }
   .dashboard-top-sec.wallet-top-wrap {
-    padding-top:10px;
+    padding-top: 10px;
   }
   .wallet-top-nwrap .wallet-title-btns {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     flex-wrap: wrap;
   }
   .send-page-wrapper .send-btn-wrap .btn-cancel-payment{
@@ -1724,7 +1723,6 @@
   }
 }
 @media only screen and (max-width: 1023px) and (min-width: 992px) {
-  
 }
 @media only screen and (max-width: 991px) {
   .logo-image img {
@@ -1960,7 +1958,7 @@
   }
   .send-top-sec .title-content-wrap {
     width: 100%;
-    padding-bottom:10px;
+    padding-bottom: 10px;
   }
   .send-top-right-sec {
     width: auto;
@@ -3955,10 +3953,10 @@
     width: 100%;
     margin: auto;
   }
-  .fund-payment-option-wrap>a:first-child {
+  .fund-payment-option-wrap > a:first-child {
     margin-right: 10px;
   }
-  .fund-payment-option-wrap>a:last-child {
+  .fund-payment-option-wrap > a:last-child {
     margin-left: 10px;
   }
   .fund-payment-option-wrap .fund-payment-option {
